# GameOfLife-Haskell

./: GameOfLife-Haskell.cabal  README.md  cabal2nix.sh  project.nix  projext.nix  stack.yaml
src/: Cell.hs  Game.hs  Main.hs  Position.hs  World.hs
test/: Tests.hs
