name:                GameOfLife-Haskell
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/GameOfLife-Haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules: Game
                  ,Cell
                  ,World
  build-depends:
    base >= 4.7 && < 5
  default-language:    Haskell2010

executable GameOfLife-Haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,GameOfLife-Haskell

Test-Suite tests
  ghc-options:      -Wall
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
                   ,src
  main-is:          Tests.hs
  build-depends:    base >= 4.7 && < 5
                   ,hspec >= 1.8
                   ,GameOfLife-Haskell
  default-language: Haskell2010
  other-modules:    Cell
                   ,World
